# Generated by Django 5.2.16 on 2026-07-24 00:09

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('accounts', '0002_sellerprofile'),
        ('catalog', '0006_listingproduct_duration_days'),
        ('listings', '0010_remove_listing_listings_status_valid_and_more'),
        ('locations', '0003_referenceimport'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Favorite',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'ordering': ('-created_at',),
            },
        ),
        migrations.RemoveConstraint(
            model_name='listing',
            name='listings_status_valid',
        ),
        migrations.RemoveConstraint(
            model_name='listing',
            name='listings_status_published_at_pair',
        ),
        migrations.AddField(
            model_name='listing',
            name='expires_at',
            field=models.DateTimeField(blank=True, null=True),
        ),
        migrations.AddField(
            model_name='listing',
            name='last_material_edit_at',
            field=models.DateTimeField(blank=True, null=True),
        ),
        migrations.AlterField(
            model_name='listing',
            name='status',
            field=models.CharField(choices=[('draft', 'Draft'), ('submitted', 'Submitted'), ('awaiting_payment', 'Awaiting payment'), ('in_review', 'In review'), ('published', 'Published'), ('changes_requested', 'Changes requested'), ('rejected', 'Rejected'), ('suspended', 'Suspended'), ('sold', 'Sold'), ('expired', 'Expired'), ('archived', 'Archived')], default='draft', max_length=32),
        ),
        migrations.AlterField(
            model_name='moderationaction',
            name='action_type',
            field=models.CharField(choices=[('submitted', 'Submitted'), ('claimed', 'Claimed'), ('approved', 'Approved'), ('changes_requested', 'Changes requested'), ('rejected', 'Rejected'), ('escalated', 'Escalated'), ('suspended', 'Suspended'), ('policy_flagged', 'Policy flagged'), ('direct_approval', 'Direct demo approval'), ('material_edit', 'Material edit submitted'), ('marked_sold', 'Marked sold'), ('archived', 'Archived'), ('restored_draft', 'Restored to draft'), ('renewed', 'Renewed')], max_length=32),
        ),
        migrations.AlterField(
            model_name='moderationaction',
            name='from_status',
            field=models.CharField(choices=[('draft', 'Draft'), ('submitted', 'Submitted'), ('awaiting_payment', 'Awaiting payment'), ('in_review', 'In review'), ('published', 'Published'), ('changes_requested', 'Changes requested'), ('rejected', 'Rejected'), ('suspended', 'Suspended'), ('sold', 'Sold'), ('expired', 'Expired'), ('archived', 'Archived')], max_length=32),
        ),
        migrations.AlterField(
            model_name='moderationaction',
            name='to_status',
            field=models.CharField(choices=[('draft', 'Draft'), ('submitted', 'Submitted'), ('awaiting_payment', 'Awaiting payment'), ('in_review', 'In review'), ('published', 'Published'), ('changes_requested', 'Changes requested'), ('rejected', 'Rejected'), ('suspended', 'Suspended'), ('sold', 'Sold'), ('expired', 'Expired'), ('archived', 'Archived')], max_length=32),
        ),
        migrations.AddIndex(
            model_name='listing',
            index=models.Index(fields=['status', 'expires_at'], name='listings_expiry_safety_idx'),
        ),
        migrations.AddConstraint(
            model_name='listing',
            constraint=models.CheckConstraint(condition=models.Q(('status__in', ['draft', 'submitted', 'awaiting_payment', 'in_review', 'published', 'changes_requested', 'rejected', 'suspended', 'sold', 'expired', 'archived'])), name='listings_status_valid'),
        ),
        migrations.AddConstraint(
            model_name='listing',
            constraint=models.CheckConstraint(condition=models.Q(models.Q(('published_at__isnull', True), ('status__in', ('draft', 'submitted', 'awaiting_payment', 'in_review', 'changes_requested', 'rejected', 'suspended', 'sold', 'expired', 'archived'))), models.Q(('published_at__isnull', False), ('status', 'published')), _connector='OR'), name='listings_status_published_at_pair'),
        ),
        migrations.AddField(
            model_name='favorite',
            name='listing',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='favorites', to='listings.listing'),
        ),
        migrations.AddField(
            model_name='favorite',
            name='user',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='favorites', to=settings.AUTH_USER_MODEL),
        ),
        migrations.AddIndex(
            model_name='favorite',
            index=models.Index(fields=['user', '-created_at'], name='listings_favorite_user_idx'),
        ),
        migrations.AddConstraint(
            model_name='favorite',
            constraint=models.UniqueConstraint(fields=('user', 'listing'), name='listings_favorite_user_listing'),
        ),
    ]
